<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bthre"
    android:padding="16dp"
    android:gravity="center"
    tools:context=".Signup">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="-50dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/profile"
            android:layout_width="197dp"
            android:layout_height="241dp"
            android:background="@drawable/round_background"
            android:padding="15dp"
            android:src="@drawable/add"
            tools:ignore="ContentDescription" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:hintAnimationEnabled="true"
            android:textColorHint="@color/black"
            app:hintTextColor="@color/black"
            app:boxStrokeColor="@color/black">

            <EditText
                android:id="@+id/name"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/opensans"
                android:hint="@string/name"
                android:importantForAutofill="no"
                android:inputType="textNoSuggestions"
                android:maxLines="1"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:hintAnimationEnabled="true"
            android:textColorHint="@color/black"
            app:hintTextColor="@color/black"
            app:boxStrokeColor="@color/black">

            <EditText
                android:id="@+id/email"
                android:layout_width="342dp"
                android:layout_height="68dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/opensans"
                android:hint="@string/prompt_email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:hintAnimationEnabled="true"
            android:textColorHint="@color/black"
            app:hintTextColor="@color/black"
            app:boxStrokeColor="@color/black">

            <EditText
                android:id="@+id/phone"
                android:layout_width="340dp"
                android:layout_height="61dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/opensans"
                android:hint="@string/phone_number"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:maxLength="13"
                android:maxLines="1"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="5dp"
            app:hintAnimationEnabled="true"
            android:textColorHint="@color/black"
            app:hintTextColor="@color/black"
            app:boxStrokeColor="@color/black">

            <EditText
                android:id="@+id/password"
                android:layout_width="342dp"
                android:layout_height="58dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/opensans"
                android:hint="@string/prompt_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:maxLines="1"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/register"
            android:layout_width="258dp"
            android:layout_height="49dp"
            android:layout_margin="20dp"
            android:background="@drawable/button_rounded"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/not_register"
            android:textColor="@color/white"
            android:fontFamily="@font/opensans"
            android:textSize="17sp"/>

    </LinearLayout>
</LinearLayout>
