<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Receive">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Receive"
            android:fontFamily="@font/opensans"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:layout_margin="20dp"
            tools:ignore="HardcodedText" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:padding="10dp"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="5dp"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/nameError"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"

                        android:textColorHint="@color/white"
                        app:hintTextColor="@color/white"
                        app:boxStrokeColor="@color/white">

                        <EditText
                            android:id="@+id/receivername"
                            android:layout_width="368dp"
                            android:layout_height="112dp"
                            android:layout_marginTop="10dp"
                            android:backgroundTint="@android:color/transparent"
                            android:fontFamily="@font/opensans"
                            android:hint="@string/receiver_name"
                            android:importantForAutofill="no"
                            android:inputType="text"
                            android:maxLines="1"
                            android:minWidth="48dp"
                            android:minHeight="48dp"
                            android:singleLine="true"
                            android:textColor="@color/white"
                            android:textColorHint="@color/white"
                            android:textSize="20sp"
                            tools:ignore="UnusedAttribute" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/descriptionError"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minWidth="48dp"
                        android:minHeight="48dp"
                        app:passwordToggleEnabled="true"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        app:hintTextColor="@color/white"
                        android:textSize="20sp"
                        android:fontFamily="@font/opensans"
                        app:boxStrokeColor="@color/white">

                        <EditText
                            android:id="@+id/description"
                            android:layout_width="360dp"
                            android:layout_height="77dp"
                            android:layout_marginTop="10dp"
                            android:backgroundTint="@android:color/transparent"
                            android:fontFamily="@font/opensans"
                            android:hint="@string/description"
                            android:importantForAutofill="no"
                            android:inputType="textMultiLine"
                            android:maxLines="10"
                            android:minWidth="48dp"
                            android:minHeight="48dp"
                            android:textColor="@color/white"
                            android:textColorHint="@color/white"
                            android:textSize="20sp"
                            tools:ignore="UnusedAttribute" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <fragment
                        android:id="@+id/google_map"
                        xmlns:map="http://schemas.android.com/apk/res-auto"
                        android:name="com.google.android.gms.maps.SupportMapFragment"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_marginTop="20dp"
                        map:uiZoomControls="true"
                        tools:ignore="FragmentTagUsage" />

                    <Button
                        android:id="@+id/submit"
                        android:layout_width="302dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:backgroundTint="@color/button_background_color"
                        android:minWidth="48dp"
                        android:minHeight="48dp"
                        android:text="@string/submit"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        tools:ignore="UnusedAttribute" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
